@@ -22,6 +22,7 @@
   
   <string id="30030">Advanced</string>
   <string id="30031">Debug</string>
+  <string id="30032">Set big list view for videos in Confluence</string>
   
   <!--GENERAL STRINGS -->
   <string id="30050">All Packages</string>
